src/main/java/ProjLangParser.java
// $ANTLR 3.5.1 /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g 2019-12-11 14:57:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ProjLangParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDOP", "ASSIGNMENTOP", "COLON", 
		"DIGIT", "DO", "ELSE", "END", "EQ", "FALSE", "FUN", "ID", "IF", "IN", 
		"LEFT_CURLY", "LEFT_PARENTHESIS", "LET", "LT", "MULOP", "NEGATION", "NUM", 
		"RIGHT_CURLY", "RIGHT_PARENTHESIS", "SEMICOLON", "THEN", "TRUE", "VAL", 
		"WHILE", "WHITESPACE"
	};
	public static final int EOF=-1;
	public static final int ADDOP=4;
	public static final int ASSIGNMENTOP=5;
	public static final int COLON=6;
	public static final int DIGIT=7;
	public static final int DO=8;
	public static final int ELSE=9;
	public static final int END=10;
	public static final int EQ=11;
	public static final int FALSE=12;
	public static final int FUN=13;
	public static final int ID=14;
	public static final int IF=15;
	public static final int IN=16;
	public static final int LEFT_CURLY=17;
	public static final int LEFT_PARENTHESIS=18;
	public static final int LET=19;
	public static final int LT=20;
	public static final int MULOP=21;
	public static final int NEGATION=22;
	public static final int NUM=23;
	public static final int RIGHT_CURLY=24;
	public static final int RIGHT_PARENTHESIS=25;
	public static final int SEMICOLON=26;
	public static final int THEN=27;
	public static final int TRUE=28;
	public static final int VAL=29;
	public static final int WHILE=30;
	public static final int WHITESPACE=31;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ProjLangParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ProjLangParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ProjLangParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g"; }


	public static class relop_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "relop"
	// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:23:1: relop : ( LT | EQ ) ;
	public final relop_return relop() throws RecognitionException {
		relop_return retval = new relop_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set1=null;

		Object set1_tree=null;

		try {
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:23:7: ( ( LT | EQ ) )
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:
			{
			root_0 = (Object)adaptor.nil();


			set1=input.LT(1);
			if ( input.LA(1)==EQ||input.LA(1)==LT ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set1));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relop"


	public static class input_return extends ParserRuleReturnScope {
		public Expr e;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:59:1: input returns [Expr e] : ex= expr SEMICOLON ;
	public final input_return input() throws RecognitionException {
		input_return retval = new input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON2=null;
		ParserRuleReturnScope ex =null;

		Object SEMICOLON2_tree=null;

		try {
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:59:27: (ex= expr SEMICOLON )
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:60:3: ex= expr SEMICOLON
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expr_in_input365);
			ex=expr();
			state._fsp--;

			adaptor.addChild(root_0, ex.getTree());

			SEMICOLON2=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_input367); 
			SEMICOLON2_tree = (Object)adaptor.create(SEMICOLON2);
			adaptor.addChild(root_0, SEMICOLON2_tree);

			retval.e = (ex!=null?((expr_return)ex).eout:null);
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class expr_return extends ParserRuleReturnScope {
		public Expr eout;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:61:1: expr returns [Expr eout] : ( IF ifexp1= expr THEN ifexp2= expr ELSE ifexp3= expr | LET VAL letid= ID '=' letex1= expr IN letex2= expr END | LET FUN letfunnameid= ID LEFT_PARENTHESIS letfuninputid= ID RIGHT_PARENTHESIS '=' letfunex1= expr IN letfunex2= expr END | WHILE whileex1= expr DO whileex2= expr | LEFT_CURLY seqex1= expr ( SEMICOLON seqex2= expr )* RIGHT_CURLY | NEGATION negexpr= expr |idvar= ID ASSIGNMENTOP assnexpr= expr |relexpr1= relexpr );
	public final expr_return expr() throws RecognitionException {
		expr_return retval = new expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token letid=null;
		Token letfunnameid=null;
		Token letfuninputid=null;
		Token idvar=null;
		Token IF3=null;
		Token THEN4=null;
		Token ELSE5=null;
		Token LET6=null;
		Token VAL7=null;
		Token char_literal8=null;
		Token IN9=null;
		Token END10=null;
		Token LET11=null;
		Token FUN12=null;
		Token LEFT_PARENTHESIS13=null;
		Token RIGHT_PARENTHESIS14=null;
		Token char_literal15=null;
		Token IN16=null;
		Token END17=null;
		Token WHILE18=null;
		Token DO19=null;
		Token LEFT_CURLY20=null;
		Token SEMICOLON21=null;
		Token RIGHT_CURLY22=null;
		Token NEGATION23=null;
		Token ASSIGNMENTOP24=null;
		ParserRuleReturnScope ifexp1 =null;
		ParserRuleReturnScope ifexp2 =null;
		ParserRuleReturnScope ifexp3 =null;
		ParserRuleReturnScope letex1 =null;
		ParserRuleReturnScope letex2 =null;
		ParserRuleReturnScope letfunex1 =null;
		ParserRuleReturnScope letfunex2 =null;
		ParserRuleReturnScope whileex1 =null;
		ParserRuleReturnScope whileex2 =null;
		ParserRuleReturnScope seqex1 =null;
		ParserRuleReturnScope seqex2 =null;
		ParserRuleReturnScope negexpr =null;
		ParserRuleReturnScope assnexpr =null;
		ParserRuleReturnScope relexpr1 =null;

		Object letid_tree=null;
		Object letfunnameid_tree=null;
		Object letfuninputid_tree=null;
		Object idvar_tree=null;
		Object IF3_tree=null;
		Object THEN4_tree=null;
		Object ELSE5_tree=null;
		Object LET6_tree=null;
		Object VAL7_tree=null;
		Object char_literal8_tree=null;
		Object IN9_tree=null;
		Object END10_tree=null;
		Object LET11_tree=null;
		Object FUN12_tree=null;
		Object LEFT_PARENTHESIS13_tree=null;
		Object RIGHT_PARENTHESIS14_tree=null;
		Object char_literal15_tree=null;
		Object IN16_tree=null;
		Object END17_tree=null;
		Object WHILE18_tree=null;
		Object DO19_tree=null;
		Object LEFT_CURLY20_tree=null;
		Object SEMICOLON21_tree=null;
		Object RIGHT_CURLY22_tree=null;
		Object NEGATION23_tree=null;
		Object ASSIGNMENTOP24_tree=null;

		try {
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:61:29: ( IF ifexp1= expr THEN ifexp2= expr ELSE ifexp3= expr | LET VAL letid= ID '=' letex1= expr IN letex2= expr END | LET FUN letfunnameid= ID LEFT_PARENTHESIS letfuninputid= ID RIGHT_PARENTHESIS '=' letfunex1= expr IN letfunex2= expr END | WHILE whileex1= expr DO whileex2= expr | LEFT_CURLY seqex1= expr ( SEMICOLON seqex2= expr )* RIGHT_CURLY | NEGATION negexpr= expr |idvar= ID ASSIGNMENTOP assnexpr= expr |relexpr1= relexpr )
			int alt2=8;
			switch ( input.LA(1) ) {
			case IF:
				{
				alt2=1;
				}
				break;
			case LET:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==VAL) ) {
					alt2=2;
				}
				else if ( (LA2_2==FUN) ) {
					alt2=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case WHILE:
				{
				alt2=4;
				}
				break;
			case LEFT_CURLY:
				{
				alt2=5;
				}
				break;
			case NEGATION:
				{
				alt2=6;
				}
				break;
			case ID:
				{
				int LA2_6 = input.LA(2);
				if ( (LA2_6==ASSIGNMENTOP) ) {
					alt2=7;
				}
				else if ( (LA2_6==ADDOP||(LA2_6 >= DO && LA2_6 <= EQ)||LA2_6==IN||LA2_6==LEFT_PARENTHESIS||(LA2_6 >= LT && LA2_6 <= MULOP)||(LA2_6 >= RIGHT_CURLY && LA2_6 <= THEN)) ) {
					alt2=8;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 6, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FALSE:
			case LEFT_PARENTHESIS:
			case NUM:
			case TRUE:
				{
				alt2=8;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:62:3: IF ifexp1= expr THEN ifexp2= expr ELSE ifexp3= expr
					{
					root_0 = (Object)adaptor.nil();


					IF3=(Token)match(input,IF,FOLLOW_IF_in_expr387); 
					IF3_tree = (Object)adaptor.create(IF3);
					adaptor.addChild(root_0, IF3_tree);

					pushFollow(FOLLOW_expr_in_expr391);
					ifexp1=expr();
					state._fsp--;

					adaptor.addChild(root_0, ifexp1.getTree());

					THEN4=(Token)match(input,THEN,FOLLOW_THEN_in_expr393); 
					THEN4_tree = (Object)adaptor.create(THEN4);
					adaptor.addChild(root_0, THEN4_tree);

					pushFollow(FOLLOW_expr_in_expr397);
					ifexp2=expr();
					state._fsp--;

					adaptor.addChild(root_0, ifexp2.getTree());

					ELSE5=(Token)match(input,ELSE,FOLLOW_ELSE_in_expr399); 
					ELSE5_tree = (Object)adaptor.create(ELSE5);
					adaptor.addChild(root_0, ELSE5_tree);

					pushFollow(FOLLOW_expr_in_expr403);
					ifexp3=expr();
					state._fsp--;

					adaptor.addChild(root_0, ifexp3.getTree());

					retval.eout = new IfExp((ifexp1!=null?((expr_return)ifexp1).eout:null), (ifexp2!=null?((expr_return)ifexp2).eout:null), (ifexp3!=null?((expr_return)ifexp3).eout:null));
					}
					break;
				case 2 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:63:5: LET VAL letid= ID '=' letex1= expr IN letex2= expr END
					{
					root_0 = (Object)adaptor.nil();


					LET6=(Token)match(input,LET,FOLLOW_LET_in_expr411); 
					LET6_tree = (Object)adaptor.create(LET6);
					adaptor.addChild(root_0, LET6_tree);

					VAL7=(Token)match(input,VAL,FOLLOW_VAL_in_expr413); 
					VAL7_tree = (Object)adaptor.create(VAL7);
					adaptor.addChild(root_0, VAL7_tree);

					letid=(Token)match(input,ID,FOLLOW_ID_in_expr417); 
					letid_tree = (Object)adaptor.create(letid);
					adaptor.addChild(root_0, letid_tree);

					char_literal8=(Token)match(input,EQ,FOLLOW_EQ_in_expr419); 
					char_literal8_tree = (Object)adaptor.create(char_literal8);
					adaptor.addChild(root_0, char_literal8_tree);

					pushFollow(FOLLOW_expr_in_expr423);
					letex1=expr();
					state._fsp--;

					adaptor.addChild(root_0, letex1.getTree());

					IN9=(Token)match(input,IN,FOLLOW_IN_in_expr425); 
					IN9_tree = (Object)adaptor.create(IN9);
					adaptor.addChild(root_0, IN9_tree);

					pushFollow(FOLLOW_expr_in_expr429);
					letex2=expr();
					state._fsp--;

					adaptor.addChild(root_0, letex2.getTree());

					END10=(Token)match(input,END,FOLLOW_END_in_expr431); 
					END10_tree = (Object)adaptor.create(END10);
					adaptor.addChild(root_0, END10_tree);

					retval.eout = new LetValExp((letid!=null?letid.getText():null), (letex1!=null?((expr_return)letex1).eout:null), (letex2!=null?((expr_return)letex2).eout:null));
					}
					break;
				case 3 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:64:5: LET FUN letfunnameid= ID LEFT_PARENTHESIS letfuninputid= ID RIGHT_PARENTHESIS '=' letfunex1= expr IN letfunex2= expr END
					{
					root_0 = (Object)adaptor.nil();


					LET11=(Token)match(input,LET,FOLLOW_LET_in_expr439); 
					LET11_tree = (Object)adaptor.create(LET11);
					adaptor.addChild(root_0, LET11_tree);

					FUN12=(Token)match(input,FUN,FOLLOW_FUN_in_expr441); 
					FUN12_tree = (Object)adaptor.create(FUN12);
					adaptor.addChild(root_0, FUN12_tree);

					letfunnameid=(Token)match(input,ID,FOLLOW_ID_in_expr445); 
					letfunnameid_tree = (Object)adaptor.create(letfunnameid);
					adaptor.addChild(root_0, letfunnameid_tree);

					LEFT_PARENTHESIS13=(Token)match(input,LEFT_PARENTHESIS,FOLLOW_LEFT_PARENTHESIS_in_expr447); 
					LEFT_PARENTHESIS13_tree = (Object)adaptor.create(LEFT_PARENTHESIS13);
					adaptor.addChild(root_0, LEFT_PARENTHESIS13_tree);

					letfuninputid=(Token)match(input,ID,FOLLOW_ID_in_expr451); 
					letfuninputid_tree = (Object)adaptor.create(letfuninputid);
					adaptor.addChild(root_0, letfuninputid_tree);

					RIGHT_PARENTHESIS14=(Token)match(input,RIGHT_PARENTHESIS,FOLLOW_RIGHT_PARENTHESIS_in_expr453); 
					RIGHT_PARENTHESIS14_tree = (Object)adaptor.create(RIGHT_PARENTHESIS14);
					adaptor.addChild(root_0, RIGHT_PARENTHESIS14_tree);

					char_literal15=(Token)match(input,EQ,FOLLOW_EQ_in_expr455); 
					char_literal15_tree = (Object)adaptor.create(char_literal15);
					adaptor.addChild(root_0, char_literal15_tree);

					pushFollow(FOLLOW_expr_in_expr459);
					letfunex1=expr();
					state._fsp--;

					adaptor.addChild(root_0, letfunex1.getTree());

					IN16=(Token)match(input,IN,FOLLOW_IN_in_expr461); 
					IN16_tree = (Object)adaptor.create(IN16);
					adaptor.addChild(root_0, IN16_tree);

					pushFollow(FOLLOW_expr_in_expr465);
					letfunex2=expr();
					state._fsp--;

					adaptor.addChild(root_0, letfunex2.getTree());

					END17=(Token)match(input,END,FOLLOW_END_in_expr467); 
					END17_tree = (Object)adaptor.create(END17);
					adaptor.addChild(root_0, END17_tree);

					retval.eout = new LetFunExp((letfunnameid!=null?letfunnameid.getText():null), (letfuninputid!=null?letfuninputid.getText():null), (letfunex1!=null?((expr_return)letfunex1).eout:null), (letfunex2!=null?((expr_return)letfunex2).eout:null));
					}
					break;
				case 4 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:66:5: WHILE whileex1= expr DO whileex2= expr
					{
					root_0 = (Object)adaptor.nil();


					WHILE18=(Token)match(input,WHILE,FOLLOW_WHILE_in_expr479); 
					WHILE18_tree = (Object)adaptor.create(WHILE18);
					adaptor.addChild(root_0, WHILE18_tree);

					pushFollow(FOLLOW_expr_in_expr483);
					whileex1=expr();
					state._fsp--;

					adaptor.addChild(root_0, whileex1.getTree());

					DO19=(Token)match(input,DO,FOLLOW_DO_in_expr485); 
					DO19_tree = (Object)adaptor.create(DO19);
					adaptor.addChild(root_0, DO19_tree);

					pushFollow(FOLLOW_expr_in_expr489);
					whileex2=expr();
					state._fsp--;

					adaptor.addChild(root_0, whileex2.getTree());

					retval.eout = new WhileExp((whileex1!=null?((expr_return)whileex1).eout:null), (whileex2!=null?((expr_return)whileex2).eout:null));
					}
					break;
				case 5 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:67:5: LEFT_CURLY seqex1= expr ( SEMICOLON seqex2= expr )* RIGHT_CURLY
					{
					root_0 = (Object)adaptor.nil();


					LEFT_CURLY20=(Token)match(input,LEFT_CURLY,FOLLOW_LEFT_CURLY_in_expr497); 
					LEFT_CURLY20_tree = (Object)adaptor.create(LEFT_CURLY20);
					adaptor.addChild(root_0, LEFT_CURLY20_tree);

					pushFollow(FOLLOW_expr_in_expr501);
					seqex1=expr();
					state._fsp--;

					adaptor.addChild(root_0, seqex1.getTree());

					retval.eout = new SeqExp((seqex1!=null?((expr_return)seqex1).eout:null));
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:67:63: ( SEMICOLON seqex2= expr )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==SEMICOLON) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:67:64: SEMICOLON seqex2= expr
							{
							SEMICOLON21=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_expr506); 
							SEMICOLON21_tree = (Object)adaptor.create(SEMICOLON21);
							adaptor.addChild(root_0, SEMICOLON21_tree);

							pushFollow(FOLLOW_expr_in_expr510);
							seqex2=expr();
							state._fsp--;

							adaptor.addChild(root_0, seqex2.getTree());

							 ((SeqExp)retval.eout).addExpr((seqex2!=null?((expr_return)seqex2).eout:null));
							}
							break;

						default :
							break loop1;
						}
					}

					RIGHT_CURLY22=(Token)match(input,RIGHT_CURLY,FOLLOW_RIGHT_CURLY_in_expr517); 
					RIGHT_CURLY22_tree = (Object)adaptor.create(RIGHT_CURLY22);
					adaptor.addChild(root_0, RIGHT_CURLY22_tree);

					}
					break;
				case 6 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:68:5: NEGATION negexpr= expr
					{
					root_0 = (Object)adaptor.nil();


					NEGATION23=(Token)match(input,NEGATION,FOLLOW_NEGATION_in_expr524); 
					NEGATION23_tree = (Object)adaptor.create(NEGATION23);
					adaptor.addChild(root_0, NEGATION23_tree);

					pushFollow(FOLLOW_expr_in_expr528);
					negexpr=expr();
					state._fsp--;

					adaptor.addChild(root_0, negexpr.getTree());

					retval.eout = new NotExp((negexpr!=null?((expr_return)negexpr).eout:null));
					}
					break;
				case 7 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:69:5: idvar= ID ASSIGNMENTOP assnexpr= expr
					{
					root_0 = (Object)adaptor.nil();


					idvar=(Token)match(input,ID,FOLLOW_ID_in_expr538); 
					idvar_tree = (Object)adaptor.create(idvar);
					adaptor.addChild(root_0, idvar_tree);

					ASSIGNMENTOP24=(Token)match(input,ASSIGNMENTOP,FOLLOW_ASSIGNMENTOP_in_expr540); 
					ASSIGNMENTOP24_tree = (Object)adaptor.create(ASSIGNMENTOP24);
					adaptor.addChild(root_0, ASSIGNMENTOP24_tree);

					pushFollow(FOLLOW_expr_in_expr544);
					assnexpr=expr();
					state._fsp--;

					adaptor.addChild(root_0, assnexpr.getTree());

					 retval.eout =new AssnExp((idvar!=null?idvar.getText():null), (assnexpr!=null?((expr_return)assnexpr).eout:null));
										     
					}
					break;
				case 8 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:71:5: relexpr1= relexpr
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_relexpr_in_expr554);
					relexpr1=relexpr();
					state._fsp--;

					adaptor.addChild(root_0, relexpr1.getTree());

					retval.eout =(relexpr1!=null?((relexpr_return)relexpr1).relout:null);
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class relexpr_return extends ParserRuleReturnScope {
		public Expr relout;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "relexpr"
	// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:72:1: relexpr returns [Expr relout] : ae1= arithexpr (reloperation= relop ae2= arithexpr )? ;
	public final relexpr_return relexpr() throws RecognitionException {
		relexpr_return retval = new relexpr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope ae1 =null;
		ParserRuleReturnScope reloperation =null;
		ParserRuleReturnScope ae2 =null;


		try {
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:73:2: (ae1= arithexpr (reloperation= relop ae2= arithexpr )? )
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:73:4: ae1= arithexpr (reloperation= relop ae2= arithexpr )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_arithexpr_in_relexpr571);
			ae1=arithexpr();
			state._fsp--;

			adaptor.addChild(root_0, ae1.getTree());

			retval.relout =(ae1!=null?((arithexpr_return)ae1).aeout:null);
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:73:40: (reloperation= relop ae2= arithexpr )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==EQ||LA3_0==LT) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:73:41: reloperation= relop ae2= arithexpr
					{
					pushFollow(FOLLOW_relop_in_relexpr578);
					reloperation=relop();
					state._fsp--;

					adaptor.addChild(root_0, reloperation.getTree());

					pushFollow(FOLLOW_arithexpr_in_relexpr582);
					ae2=arithexpr();
					state._fsp--;

					adaptor.addChild(root_0, ae2.getTree());

					retval.relout = new BinExp(retval.relout, (ae2!=null?((arithexpr_return)ae2).aeout:null), (reloperation!=null?input.toString(reloperation.start,reloperation.stop):null));
					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relexpr"


	public static class arithexpr_return extends ParserRuleReturnScope {
		public Expr aeout;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "arithexpr"
	// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:75:1: arithexpr returns [Expr aeout] : t1= term (addop= ADDOP t2= term )* ;
	public final arithexpr_return arithexpr() throws RecognitionException {
		arithexpr_return retval = new arithexpr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token addop=null;
		ParserRuleReturnScope t1 =null;
		ParserRuleReturnScope t2 =null;

		Object addop_tree=null;

		try {
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:76:2: (t1= term (addop= ADDOP t2= term )* )
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:76:4: t1= term (addop= ADDOP t2= term )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_term_in_arithexpr601);
			t1=term();
			state._fsp--;

			adaptor.addChild(root_0, t1.getTree());

			retval.aeout =(t1!=null?((term_return)t1).termout:null);
			// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:76:34: (addop= ADDOP t2= term )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ADDOP) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /home/velraj/0others/Villanova/4_8310_Programming_Languages/Project2/ProjLang.g:76:35: addop= ADDOP t2= term
					{
					addop=(Token)match(input,ADDOP,FOLLOW_ADDOP_in_arithexpr608); 
					addop_tree = (Object)adaptor.create(addop);
					adaptor.addChild(root_0, addop_tree);

					pushFollow(FOLLOW_term_in_arithexpr612);
					t2=term();
					state._fsp--;

					adaptor.addChild(root_0, t2.getTree());

					 retval.aeout = new BinExp(retval.aeout, (t2!=null?((term_return)t2).termout:null), (addop!=null?addop.getText():null));
					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arithexpr"

